# InputViewer

./: .gitignore  CMakeLists.txt  README.md  build.sh
.github/workflows/: check_compilation.yml  update_documentation.yml
cmake/modules/: ClangFormat.cmake  MakeDoc.cmake
include/InputViewer/: Constant.hpp  FileDescriptor.hpp
lib/: CMakeLists.txt
src/: main.cpp
